// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptinMetrics Snapshots android render matches snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents="large"
          sheetCornerRadius={-1}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetLargestUndimmedDetent="all"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "#000",
                    "flex": 1,
                    "opacity": 0.07,
                  }
                }
              />
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <RNCSafeAreaView
                        edges={
                          {
                            "bottom": "additive",
                            "left": "off",
                            "right": "off",
                            "top": "off",
                          }
                        }
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "flexBasis": "0%",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "paddingTop": 42,
                          }
                        }
                      >
                        <RCTScrollView
                          onContentSizeChange={[Function]}
                          onLayout={[Function]}
                          onScroll={[Function]}
                          scrollEventThrottle={150}
                          style={
                            {
                              "flexBasis": "0%",
                              "flexGrow": 1,
                              "flexShrink": 1,
                            }
                          }
                          testID="meta-metrics-container"
                        >
                          <View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                              <Text … />
                              <Text … />
                              <View … />
                            </View>
                          </View>
                        </RCTScrollView>
                        <View
                          style={
                            [
                              {
                                "display": "flex",
                                "flexDirection": "row",
                                "paddingBottom": 8,
                                "paddingLeft": 16,
                                "paddingRight": 16,
                                "paddingTop": 8,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            accessibilityLabel="Continue"
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "busy": undefined,
                                "checked": undefined,
                                "disabled": false,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            jestAnimatedProps={
                              {
                                "value": [Object],
                              }
                            }
                            jestAnimatedStyle={
                              {
                                "value": [Object],
                              }
                            }
                            jestInlineStyle={
                              [
                                [Object],
                                [Object],
                                [Object],
                              ]
                            }
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              [
                                [Object],
                                [Object],
                                [Object],
                              ]
                            }
                            testID="optin-metrics-continue-button-id"
                          >
                            <Text
                              accessibilityRole="text"
                              ellipsizeMode="clip"
                              numberOfLines={1}
                              style={[Array]}
                            >
                              Continue
                            </Text>
                          </View>
                        </View>
                      </RNCSafeAreaView>
                    </View>
                    <View
                      collapsable={false}
                      pointerEvents="box-none"
                      style={{}}
                    >
                      <View
                        accessibilityElementsHidden={false}
                        importantForAccessibility="auto"
                        onLayout={[Function]}
                        pointerEvents="box-none"
                        style={null}
                      >
                        <View
                          collapsable={false}
                          pointerEvents="box-none"
                          style={
                            {
                              "bottom": 0,
                              "left": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                              "zIndex": 0,
                            }
                          }
                        >
                          <View
                            collapsable={false}
                            style={
                              {
                                "backgroundColor": "rgb(255, 255, 255)",
                                "borderBottomColor": "rgb(216, 216, 216)",
                                "flex": 1,
                                "shadowColor": "rgb(216, 216, 216)",
                                "shadowOffset": [Object],
                                "shadowOpacity": 0.85,
                                "shadowRadius": 0,
                              }
                            }
                          />
                        </View>
                        <View
                          collapsable={false}
                          pointerEvents="box-none"
                          style={
                            {
                              "height": 56,
                              "maxHeight": undefined,
                              "minHeight": undefined,
                              "opacity": undefined,
                              "transform": undefined,
                            }
                          }
                        >
                          <View
                            pointerEvents="none"
                            style={
                              {
                                "height": 0,
                              }
                            }
                          />
                          <View
                            pointerEvents="box-none"
                            style={
                              {
                                "alignItems": "stretch",
                                "flex": 1,
                                "flexDirection": "row",
                              }
                            }
                          >
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={[Object]}
                            />
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={[Object]}
                            >
                              <Text … />
                            </View>
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={[Object]}
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "height": 56,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          }
        }
      />
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`OptinMetrics Snapshots android render matches snapshot with status bar height to zero 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents="large"
          sheetCornerRadius={-1}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetLargestUndimmedDetent="all"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "#000",
                    "flex": 1,
                    "opacity": 0.07,
                  }
                }
              />
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <RNCSafeAreaView
                        edges={
                          {
                            "bottom": "additive",
                            "left": "off",
                            "right": "off",
                            "top": "off",
                          }
                        }
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "flexBasis": "0%",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "paddingTop": 40,
                          }
                        }
                      >
                        <RCTScrollView
                          onContentSizeChange={[Function]}
                          onLayout={[Function]}
                          onScroll={[Function]}
                          scrollEventThrottle={150}
                          style={
                            {
                              "flexBasis": "0%",
                              "flexGrow": 1,
                              "flexShrink": 1,
                            }
                          }
                          testID="meta-metrics-container"
                        >
                          <View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                              <Text … />
                              <Text … />
                              <View … />
                            </View>
                          </View>
                        </RCTScrollView>
                        <View
                          style={
                            [
                              {
                                "display": "flex",
                                "flexDirection": "row",
                                "paddingBottom": 8,
                                "paddingLeft": 16,
                                "paddingRight": 16,
                                "paddingTop": 8,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            accessibilityLabel="Continue"
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "busy": undefined,
                                "checked": undefined,
                                "disabled": false,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            jestAnimatedProps={
                              {
                                "value": [Object],
                              }
                            }
                            jestAnimatedStyle={
                              {
                                "value": [Object],
                              }
                            }
                            jestInlineStyle={
                              [
                                [Object],
                                [Object],
                                [Object],
                              ]
                            }
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              [
                                [Object],
                                [Object],
                                [Object],
                              ]
                            }
                            testID="optin-metrics-continue-button-id"
                          >
                            <Text
                              accessibilityRole="text"
                              ellipsizeMode="clip"
                              numberOfLines={1}
                              style={[Array]}
                            >
                              Continue
                            </Text>
                          </View>
                        </View>
                      </RNCSafeAreaView>
                    </View>
                    <View
                      collapsable={false}
                      pointerEvents="box-none"
                      style={{}}
                    >
                      <View
                        accessibilityElementsHidden={false}
                        importantForAccessibility="auto"
                        onLayout={[Function]}
                        pointerEvents="box-none"
                        style={null}
                      >
                        <View
                          collapsable={false}
                          pointerEvents="box-none"
                          style={
                            {
                              "bottom": 0,
                              "left": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                              "zIndex": 0,
                            }
                          }
                        >
                          <View
                            collapsable={false}
                            style={
                              {
                                "backgroundColor": "rgb(255, 255, 255)",
                                "borderBottomColor": "rgb(216, 216, 216)",
                                "flex": 1,
                                "shadowColor": "rgb(216, 216, 216)",
                                "shadowOffset": [Object],
                                "shadowOpacity": 0.85,
                                "shadowRadius": 0,
                              }
                            }
                          />
                        </View>
                        <View
                          collapsable={false}
                          pointerEvents="box-none"
                          style={
                            {
                              "height": 56,
                              "maxHeight": undefined,
                              "minHeight": undefined,
                              "opacity": undefined,
                              "transform": undefined,
                            }
                          }
                        >
                          <View
                            pointerEvents="none"
                            style={
                              {
                                "height": 0,
                              }
                            }
                          />
                          <View
                            pointerEvents="box-none"
                            style={
                              {
                                "alignItems": "stretch",
                                "flex": 1,
                                "flexDirection": "row",
                              }
                            }
                          >
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={[Object]}
                            />
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={[Object]}
                            >
                              <Text … />
                            </View>
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={[Object]}
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "height": 56,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          }
        }
      />
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`OptinMetrics Snapshots iOS renders correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  OptinMetrics
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents="large"
          sheetCornerRadius={-1}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetLargestUndimmedDetent="all"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <RNCSafeAreaView
                        edges={
                          {
                            "bottom": "additive",
                            "left": "off",
                            "right": "off",
                            "top": "off",
                          }
                        }
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "flexBasis": "0%",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "paddingTop": 40,
                          }
                        }
                      >
                        <RCTScrollView
                          onContentSizeChange={[Function]}
                          onLayout={[Function]}
                          onScroll={[Function]}
                          scrollEventThrottle={150}
                          style={
                            {
                              "flexBasis": "0%",
                              "flexGrow": 1,
                              "flexShrink": 1,
                            }
                          }
                          testID="meta-metrics-container"
                        >
                          <View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                              <Text … />
                              <Text … />
                              <View … />
                            </View>
                          </View>
                        </RCTScrollView>
                        <View
                          style={
                            [
                              {
                                "display": "flex",
                                "flexDirection": "row",
                                "paddingBottom": 8,
                                "paddingLeft": 16,
                                "paddingRight": 16,
                                "paddingTop": 8,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            accessibilityLabel="Continue"
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "busy": undefined,
                                "checked": undefined,
                                "disabled": false,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            jestAnimatedProps={
                              {
                                "value": [Object],
                              }
                            }
                            jestAnimatedStyle={
                              {
                                "value": [Object],
                              }
                            }
                            jestInlineStyle={
                              [
                                [Object],
                                [Object],
                                [Object],
                              ]
                            }
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              [
                                [Object],
                                [Object],
                                [Object],
                              ]
                            }
                            testID="optin-metrics-continue-button-id"
                          >
                            <Text
                              accessibilityRole="text"
                              ellipsizeMode="clip"
                              numberOfLines={1}
                              style={[Array]}
                            >
                              Continue
                            </Text>
                          </View>
                        </View>
                      </RNCSafeAreaView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
